# wanted-keumbang

./: .docker-compose.yml  .gitignore  README.md  nginx.conf  pyproject.toml  structures.txt
auth-server/: pyproject.toml
auth-server/src/: grpc_server.py  structure.txt
auth-server/src/authentication/: grpc.py  grpc_server.py  grpc_service.py  models.py  serializers.py  urls.py  views.py
auth-server/src/authentication/migrations/: 0001_initial.py
auth-server/src/authentication/proto/: auth.proto  auth_pb2.py  auth_pb2_grpc.py
auth-server/src/config/: asgi.py  settings.py  urls.py
grpc/: grpc_server.py
grpc/protos/: authentication.proto
resource-server/: pyproject.toml
resource-server/src/config/: settings.py  urls.py
resource-server/src/orders/: models.py  serializers.py  urls.py  views.py
resource-server/src/products/: models.py
scripts/: run_all_servers.sh  run_auth_server.sh  run_resource_server.sh
server_a/: Dockerfile
server_a/orders/: models.py
server_a/products/: models.py
server_a/server_a/: asgi.py  settings.py  urls.py
server_b/: Dockerfile  manage.py
server_b/server_b/: asgi.py  settings.py  urls.py  wsgi.py
src/auth_server/: Dockerfile  auth_pb2_grpc.py  grpc_server.py  manage.py  pyproject.toml  start_auth_servers.sh  test_grpc_server.py
src/auth_server/accounts/: apps.py  urls.py  views.py
src/auth_server/auth_server/: settings.py  urls.py
src/auth_server/proto/: auth.proto
src/resource_server/: auth_pb2.py  grpc_client.py  grpc_server.py  manage.py  pyproject.toml  start_resource_servers.sh
src/resource_server/orders/: models.py  serializers.py  urls.py  views.py
src/resource_server/orders/migrations/: 0001_initial.py
src/resource_server/products/: models.py  serializers.py  urls.py  views.py
src/resource_server/products/migrations/: 0001_initial.py
src/resource_server/resource_server/: settings.py  urls.py
