[tool.poetry]
name = "resource-server"
version = "0.1.0"
description = ""
authors = ["Hess <hess90wang@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
django = "^5.1.1"
gunicorn = "^21.0"
grpcio = "^1.56.0"
grpcio-tools = "^1.56.0"
djangorestframework = "^3.14"
mysqlclient = "^2.2.4"
drf-yasg = "^1.21.7"
django-redis = "^5.4.0"
redis = "^5.0.8"
django-environ = "^0.11.2"
django-cors-headers = "^4.4.0"
django-grpc = "^1.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
